--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,10 @@
 <section class="hero">
     <div class="container">
         <h1 class="title">ice cream made with <span class="title-red">passion</span></h1>
-        <nav>
-            <button class="button-product">Products</button>
-            <button class="button-him">How it’s made?</button>
-        </nav>
+        <ul class="nav">
+            <li><a class="button-product" href="#">Products</a></li>
+            <li><a class="button-him" href="#">How it’s made?</a></li>
+        </ul>
         <ul class="list">
             <li class="item">
                 <b class="nomber-of">16</b>
@@ -20,7 +20,7 @@
             <source srcset="./images/1-hero/768-milk.png 1x, ./images/1-hero/768-milk@2x.png 2x, ./images/1-hero/768-milk@3x.png 3x" media="(min-width:768px)"> 
             <source srcset="./images/1-hero/1200-milk.webp 1x, ./images/1-hero/1200-milk@2x.webp 2x, ./images/1-hero/1200-milk@3x.webp 3x" media="(min-width:1200px)" type="image/webp"> 
             <source srcset="./images/1-hero/1200-milk.png 1x, ./images/1-hero/1200-milk@2x.png 2x, ./images/1-hero/1200-milk@3x.png 3x" media="(min-width:1200px)">     
-            <img src="./images/1-hero/1200-milk.png" width="188">    
+            <img class="milk" src="./images/1-hero/1200-milk.png" width="188">    
         </picture>
         <picture>
             <source srcset="./images/1-hero/320-icecream.webp 1x, ./images/1-hero/320-icecream@2x.webp 2x, ./images/1-hero/320-icecream@3x.webp 3x" media="(min-width:320px)" type="image/webp"> 
@@ -29,20 +29,22 @@
             <source srcset="./images/1-hero/768-icecream.png 1x, ./images/1-hero/768-icecream@2x.png 2x, ./images/1-hero/768-icecream@3x.png 3x" media="(min-width:768px)"> 
             <source srcset="./images/1-hero/1200-icecream.webp 1x, ./images/1-hero/1200-icecream@2x.webp 2x, ./images/1-hero/1200-icecream@3x.webp 3x" media="(min-width:1200px)" type="image/webp"> 
             <source srcset="./images/1-hero/1200-icecream.png 1x, ./images/1-hero/1200-icecream@2x.png 2x, ./images/1-hero/1200-icecream@3x.png 3x" media="(min-width:1200px)">     
-            <img src="./images/1-hero/1200-icecream.png" width="236">    
+            <img class="icecream" src="./images/1-hero/1200-icecream.png" width="236">    
         </picture>
         <picture>
             <source srcset="./images/1-hero/768-ice-girl.webp 1x, ./images/1-hero/768-ice-girl@2x.webp 2x, ./images/1-hero/768-ice-girl@3x.webp 3x" media="(min-width:768px)" type="image/webp"> 
             <source srcset="./images/1-hero/768-ice-girl.png 1x, ./images/1-hero/768-ice-girl@2x.png 2x, ./images/1-hero/768-ice-girl@3x.png 3x" media="(min-width:768px)"> 
             <source srcset="./images/1-hero/1200-ice-girl.webp 1x, ./images/1-hero/1200-ice-girl@2x.webp 2x, ./images/1-hero/1200-ice-girl@3x.webp 3x" media="(min-width:1200px)" type="image/webp"> 
             <source srcset="./images/1-hero/1200-ice-girl.png 1x, ./images/1-hero/1200-ice-girl@2x.png 2x, ./images/1-hero/1200-ice-girl@3x.png 3x" media="(min-width:1200px)">     
-            <img src="./images/1-hero/1200-ice-girl.png" width="199">    
+            <img class="ice-girl" src="./images/1-hero/1200-ice-girl.png" width="199">    
         </picture>
+        <div class="info-bio">
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
         <button class="button-bio">
-            <svg>
+            <svg width="7px" heighy="6">
                 <use href="./images/sprite.svg#icon-arrow"></use>
             </svg>
         </button>
+        </div>
     </div>
 </section>
