--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,5 +1,5 @@
 header{
-    background-color: var(--pink);
+    background-color: var(--hero-pink);
     font-family: 'DM Sans', sans-serif;
     @include font-mobile($fs:14px, $lh:18px);
     color: var(--white);
@@ -20,7 +20,7 @@ header{
         width: 40px;
         height: 40px;
         border: none;
-        background-color: var(--pink);
+        background-color: Transparent;
         fill: var(--dark-pink);
         cursor: pointer;
     }
@@ -33,7 +33,8 @@ header{
             position: relative;
             justify-content: space-between;
             align-items: center;
-            padding: 6px 0;
+            padding-top: 6px;
+            padding-bottom: 27px;
         }
         .burger{
             position: absolute;
@@ -54,6 +55,8 @@ header{
             padding-bottom: 7px;
         }
         .burger{
+            position: relative;
+            z-index: 1;
             margin-left: auto;
             margin-right: 30px;
 
@@ -94,7 +97,7 @@ header{
         }
     }
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1200px) {
         .container{
             @include font-desktop();
             position: relative;
