без модального окна

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -72,13 +72,13 @@
       </div>
     </div>
   </div>
-  <div class="backdrop is-hiden" data-modal>
+  <!-- <div class="backdrop-modal is-hiden" data-modal>
     <div class="modal">
       <button type="button" class="modal-close" data-modal-close>
         <svg width="11" height="11" class="modal-window__icon">
-          <use href=""></use>
+          <use href="./images/sprite.svg#close"></use>
         </svg>
       </button>
-    </div>
+    </div> -->
   </div>
 </section>
