Add scroll action to section

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -38,16 +38,16 @@
           <a href="./index.html" class="navigation-link link current">Home</a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link link">About us</a>
+          <a href="#gallery" class="navigation-link link">About us</a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link link">How it’s made?</a>
+          <a href="#about" class="navigation-link link">How it’s made?</a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link link">Our products</a>
+          <a href="#products-section" class="navigation-link link">Our products</a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link link">Contact</a>
+          <a href="#footer" class="navigation-link link">Contact</a>
         </li>
       </ul>
     </nav>
