--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,39 +1,26 @@
-<section class="products-section">
+<section class="products-section" id="products-section">
   <div class="products-container container">
     <h2 class="products-first-title">100% natural</h2>
     <h3 class="products-second-title">products</h3>
     <ul class="products-list">
       <li class="products-list-item">
         <picture>
-          <source
-            srcset="
+          <source srcset="
               ./images/products/ice-cream-desktop.png    1x,
               ./images/products/ice-cream-desktop@2x.png 2x
-            "
-            media="(min-width: 1280px)"
-          />
+            " media="(min-width: 1280px)" />
 
-          <source
-            srcset="
+          <source srcset="
               ./images/products/ice-cream-tablet.png    1x,
               ./images/products/ice-cream-tablet@2x.png 2x
-            "
-            media="(min-width: 768px)"
-          />
+            " media="(min-width: 768px)" />
 
-          <source
-            srcset="
+          <source srcset="
               ./images/products/ice-cream-mobile.png    1x,
               ./images/products/ice-cream-mobile@2x.png 2x
-            "
-            media="(max-width: 767px)"
-          />
+            " media="(max-width: 767px)" />
 
-          <img
-            class="products-list-image wobble-hor-bottom"
-            src="./images/products/ice-cream-mobile.png"
-            alt=""
-          />
+          <img class="products-list-image wobble-hor-bottom" src="./images/products/ice-cream-mobile.png" alt="" />
         </picture>
 
         <h4 class="product-list-title">ice cream</h4>
@@ -50,35 +37,22 @@
       </li>
       <li class="products-list-item">
         <picture>
-          <source
-            srcset="
+          <source srcset="
               ./images/products/coctail-desktop.png    1x,
               ./images/products/coctail-desktop@2x.png 2x
-            "
-            media="(min-width: 1280px)"
-          />
+            " media="(min-width: 1280px)" />
 
-          <source
-            srcset="
+          <source srcset="
               ./images/products/coctail-tablet.png    1x,
               ./images/products/coctail-tablet@2x.png 2x
-            "
-            media="(min-width: 768px)"
-          />
+            " media="(min-width: 768px)" />
 
-          <source
-            srcset="
+          <source srcset="
               ./images/products/coctail-mobile.png    1x,
               ./images/products/coctail-mobile@2x.png 2x
-            "
-            media="(max-width: 767px)"
-          />
+            " media="(max-width: 767px)" />
 
-          <img
-            class="products-list-image wobble-hor-bottom"
-            src="./images/products/coctail-mobile.png"
-            alt=""
-          />
+          <img class="products-list-image wobble-hor-bottom" src="./images/products/coctail-mobile.png" alt="" />
         </picture>
 
         <h4 class="product-list-title">ice coffee</h4>
@@ -95,35 +69,23 @@
       </li>
       <li class="products-list-item">
         <picture>
-          <source
-            srcset="
+          <source srcset="
               ./images/products/chocolate-ice-cream-desktop.png    1x,
               ./images/products/chocolate-ice-cream-desktop@2x.png 2x
-            "
-            media="(min-width: 1280px)"
-          />
+            " media="(min-width: 1280px)" />
 
-          <source
-            srcset="
+          <source srcset="
               ./images/products/chocolate-ice-cream-tablet.png    1x,
               ./images/products/chocolate-ice-cream-tablet@2x.png 2x
-            "
-            media="(min-width: 768px)"
-          />
+            " media="(min-width: 768px)" />
 
-          <source
-            srcset="
+          <source srcset="
               ./images/products/chocolate-ice-cream-mobile.png    1x,
               ./images/products/chocolate-ice-cream-mobile@2x.png 2x
-            "
-            media="(max-width: 767px)"
-          />
+            " media="(max-width: 767px)" />
 
-          <img
-            class="products-list-image wobble-hor-bottom"
-            src="./images/products/chocolate-ice-cream-mobile.png"
-            alt=""
-          />
+          <img class="products-list-image wobble-hor-bottom" src="./images/products/chocolate-ice-cream-mobile.png"
+            alt="" />
         </picture>
 
         <h4 class="product-list-title">milkshakes</h4>
