--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'DM Sans', sans-serif;
   font-weight: 400;
@@ -21,7 +25,6 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
-  
 }
 
 .list {
@@ -34,4 +37,3 @@ img {
 .link {
   text-decoration: none;
 }
-
