adding styles for section about
пока без фона для десктопа и без иконки в кнопке

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -5,31 +5,36 @@
             <p class="label">tradition and love</p>
             <h2 class="title">how it’s made?</h2>
         </div>
+        <div class="box-wrap">
+            <div class="img-box item-wrap">
+                <source srcset="./images/img-advantages/cow-desctop.png 1x, ./images/img-advantages/cow-desctop@2x.png 2x"
+                        media="(min-width:1200px)">
 
-    </div>
-    <div class="box-wrap">
-        <div>
-            <source srcset="./images/img-advantages/cow-desctop.png 1x, ./images/img-advantages/cow-desctop@2x.png 2x"
-                    media="(min-width:1200px)">
+                <source srcset="./images/img-advantages/cow-tablet.png 1x, ./images/img-advantages/cow-tablet@2x.png 2x"
+                        media="(min-width:768px)">
 
-            <source srcset="./images/img-advantages/cow-tablet.png 1x, ./images/img-advantages/cow-tablet@2x.png 2x"
-                    media="(min-width:768px)">
+                <source srcset="./images/img-advantages/cow-mobile.png 1x, ./images/img-advantages/cow-mobile@2x.png 2x">
 
-            <source srcset="./images/img-advantages/cow-mobile.png 1x, ./images/img-advantages/cow-mobile@2x.png 2x">
+                <img class="gallery--img" src="./images/img-advantages/cow-mobile.png" alt="photo collage">
+            </div>
+            <div class="info-box item-wrap">
+                <b>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget,
+                    egestas eros. Maecenas eleifend erat at justo fringilla.</b>
 
-            <img class="gallery--img" src="./images/img-advantages/cow-mobile.png" alt="photo collage">
+                <p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet
+                    placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+                    tincidunt.
+                   <br>&nbsp;<br>
+                    Aliquam erat volutpat. Aenean accumsan.</p>
+                <button class="about-btn" type="button">Franchise
+                    <svg class="about-icon">
+                        <use href="./images/sprite/sprite_projects.svg#contacts-icon-btn"></use>
+                    </svg>
+                </button>
+            </div>
+
         </div>
-        <div class="info-box">
-            <b>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget,
-                egestas eros. Maecenas eleifend erat at justo fringilla.</b>
-            <p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet
-                placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-                tincidunt.
-                &nbsp;
-                Aliquam erat volutpat. Aenean accumsan.</p>
-            <button type="button">Franchise</button>
-        </div>
-
     </div>
+
 
     </section>
