--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 // LAYOUT
 @import './layout/header';
 @import './layout/products';
+@import './layout/about';
 @import './layout/customer';
 @import './layout/gallery';
 @import './layout/contacts';
