Добавляє стилі копірайту

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -87,10 +87,21 @@
 
   &__copyright{
     border-top:1px solid #E1E1E1;
-    height:83px;
+    min-height:83px;
     display:flex;
     justify-content:center;
-    align-item:center;
+    align-items: center;
+  }
+
+  &__copyright-text{
+    width: 190px;
+    font-family:var(--text-main);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.5;
+    text-align: center;
+    color: var(--color-description);
+    padding: 0 20px;
   }
 
 }
