--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -38,12 +38,12 @@
                 </li>                     
             </ul>
     
-            <span class="footer__contakt-tel">Feel free to contact<a class="footer__tel link" href="tel:+610383766284"> +61 (0) 383 766 284 </a></span>            
+            <span class="footer__contakt-tel">Feel free to contact<a class="footer__contakt-link link" href="tel:+610383766284"> +61 (0) 383 766 284 </a></span>            
         </div>
     </div>
     
     <div class="footer__copyright">
-        <span class="footer__copyright">&#xa9; 2019 - IceCream. All Rights Reserved. </span>
+        <span class="footer__copyright-text">&#xa9; 2019 - IceCream. All Rights Reserved. </span>
     </div>
 
 </footer>
