--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -72,31 +72,7 @@ li {
     }
   }
 }
-// .sviper-dot-element{
-//   position: relative;
-//      color: $accent-btn-hover-color;
-//      text-align: center;
-//      margin-top: 24px;
 
-
-//     &::before {
-//      content: '.';
-//      position: absolute;
-//      width: 4px;
-//     height: 4px;
-//      color: red;
-//      top: 0;
-//      left: 47%;
-// }
-//     &::after {
-//      content: '.';
-//      position: absolute;
-//      width: 4px;
-//     height: 4px;
-//      color: red;
-//      top: 0;
-//      right: 47%;
-// 
 .sviper-name {
     font-weight: 500;
   font-size: 14px;
@@ -106,18 +82,20 @@ li {
   margin-bottom: 30px;
   margin-top: 14px;
 
-//  &::before {
-//      content: '';
-//      background-image: url(../images/reviews/elements/dots.svg);
-//      position: absolute;
-//      width: 32px;
-//     height: 4px;
-//      fill: $accent-btn-hover-color;
-//      top: 312px;
+ &::before {
+     content: '';
+     background-image: url(../images/reviews/elements/dots.svg);
+     position: absolute;
+background-repeat: no-repeat;
+     background-size: contain;
+     width: 32px;
+    height: 4px;
+     fill: $accent-btn-hover-color;
+     top: 312px;
   
-//      left: 50%;
-    //  transform: translateX(-50%);}
-// 
+     left: 50%;
+     transform: translateX(-50%);}
+
   
   
   @media screen and(min-width:768px) {
@@ -169,3 +147,29 @@ li {
   justify-content: center;
   align-items: center;
 }
+
+// .sviper-dot-element{
+//   position: relative;
+//      color: $accent-btn-hover-color;
+//      text-align: center;
+//      margin-top: 24px;
+
+
+//     &::before {
+//      content: '.';
+//      position: absolute;
+//      width: 4px;
+//     height: 4px;
+//      color: red;
+//      top: 0;
+//      left: 47%;
+// }
+//     &::after {
+//      content: '.';
+//      position: absolute;
+//      width: 4px;
+//     height: 4px;
+//      color: red;
+//      top: 0;
+//      right: 47%;
+// 
