add design text

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,25 +4,25 @@
             <h2 class="products-title">products</h2>
             <ul class="products-list">
                 <li class="products-items">
-                <div class="products-item-1">
-                    <h3 class="products-item-name">ICE CREAM</h3>
-                    <p class="products-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                    <button class="products-item-button" type="button">тут буде img</button>
-                </div>
+                    <div class="products-item-box">
+                        <h3 class="products-item-name">ICE CREAM</h3>
+                        <p class="products-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+                        <button class="products-item-button" type="button">тут буде img</button>
+                    </div>
                 </li>
                 <li class="products-items">
-                <div class="products-item-2">
-                    <h3 class="products-item-name">ICE COFFE</h3>
-                    <p class="products-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                    <button class="products-item-button" type="button">тут буде img</button>
-                </div>
+                    <div class="products-item-box">
+                        <h3 class="products-item-name">ICE COFFE</h3>
+                        <p class="products-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+                        <button class="products-item-button" type="button">тут буде img</button>
+                    </div>
                 </li>
                 <li class="products-items">
-                <div class="products-item-3">
-                    <h3 class="products-item-name">MILKSHAKES</h3>
-                    <p class="products-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                    <button class="products-item-button" type="button">тут буде img</button>
-                </div>
+                    <div class="products-item-box">
+                        <h3 class="products-item-name">MILKSHAKES</h3>
+                        <p class="products-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+                        <button class="products-item-button" type="button">тут буде img</button>
+                    </div>
                 </li>
             </ul>
         </div>
