--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -39,7 +39,7 @@
                 Aliquam erat volutpat. Aenean accumsan.</span>
                 <button type="button" class="about-button">Read more
                     <svg class="about-button-icon" height="10" width="7.5">
-                        <use href="./images/about/about-sprite.svg#icon-Vector-1"></use>
+                        <use href="./images/icon/sprite.svg#icon-Vector-1"></use>
                     </svg>
                 </button>
             </div>
