refactor the footer

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,12 +1,9 @@
 .footer {
   width: 100%;
-
-  & .container {
-    //width: 320px;
-    background-color: var(--secondary-bg-color);
-  }
+  background-color: var(--secondary-bg-color);
+  
   &-separator {
-    width: 360px; //320+2*20(paddings)
+    width: 360px;
     height: 2px;
     background-color: var(--primary-line-color);
     margin: 0 auto;
@@ -47,7 +44,7 @@
     line-height: 39px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: var(--accent-color); //#d41443;
+    color: var(--accent-color);
     margin-bottom: 40px;
   }
   &-text3 {
@@ -55,10 +52,9 @@
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
-    line-height: 186%;
-    /* or 22px */
+    line-height: 1.833;
     text-align: right;
-    color: var(--primary-dark-color); //#000000;
+    color: var(--primary-dark-color);
     padding-bottom: 40px;
     margin-left: 0px;
   }
@@ -72,10 +68,9 @@
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
-    line-height: 152%;
-    /* or 21px */
+    line-height: 1.5;
     text-align: center;
-    color: var(--secondary-dark-shaded-color); //#907e82;
+    color: var(--secondary-dark-shaded-color);
     padding-top: 30px;
     padding-bottom: 30px;
     padding-left: 85px;
@@ -89,19 +84,14 @@
 /* footer social */
 
 .footer-social {
-  //width: 206px;
-  //align-items: right;
-  //text-align: right;
   display: block;
   margin-bottom: 60px;
   margin-left: 120px; /*to align right end with text below*/
   margin-top: 6px;
 
   &-list {
-    //align-items: right;
-    //text-align: right;
     display: flex;
-    margin-left: 0; //160px;
+    margin-left: 0;
   }
 
   &-item {
@@ -125,9 +115,7 @@
 
     fill: currentColor;
     background-color: var(--social-link-bg-basic-color);
-    color: var(--primary-light-color); /*inherit;*/
-
-    //@include transition; //background-color, color;
+    color: var(--primary-light-color);
   }
 
   &-link:hover,
@@ -156,14 +144,9 @@
   }
 }
 
-//@media screen and (min-width: 480px) {
 @include adaptive-for-phone {
   .footer {
-    width: 100%;
 
-    & .container {
-      //width: 480px;
-    }
     &-separator {
       width: 520px;
     }
@@ -179,14 +162,10 @@
     }
   }
 }
-//@media screen and (min-width: 768px) {
+
 @include adaptive-for-tablet {
   .footer {
-    width: 100%;
 
-    & .container {
-      //width: 768px;
-    }
     &-separator {
       width: 768px;
     }
@@ -208,14 +187,10 @@
     }
   }
 }
-//@media screen and (min-width: 1200px) {
+
 @include adaptive-for-desktop {
   .footer {
-    width: 100%;
 
-    & .container {
-      //width: 1200px;
-    }
     &-separator {
       width: 1200px;
     }
