--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,63 +1,75 @@
 <header class="header">
-    <div class="container">
-        <a href="index.html" class="logo__link">
-            
-                <picture>
-                    <source srcset="./images/logo/logo.webp 1x, 
-                                    ./images/logo/logo@2x.webp 2x"
-                                     media="(min-width:1200px)" 
-                                     type="image/webp">                
-                        <source srcset="./images/logo/logo.png 1x, 
-                                        ./images/logo/logo@2x.png 2x" 
-                                    media="(min-width:1200px)">
-                                               
-                    <source srcset="./images/logo/logo.webp 1x, 
-                                    ./images/logo/logo@2x.webp 2x"
-                                      media="(min-width:768px)" 
-                                      type="image/webp">
-                        <source srcset="./images/logo/logo.png 1x, 
-                                        ./images/logo/logo@2x.png 2x" 
-                                    media="(min-width:768px)">
+    <!-- После сверке сделать общий контейнер -->
+    <div class="container desktop">
 
-                    <source srcset="./images/logo/logo.webp 1x, 
-                                    ./images/logo/logo@2x.webp 2x"
-                                     media="(max-width:767px)" 
-                                     type="image/webp">
-                        <source srcset="./images/logo/logo.png 1x, 
-                                        ./images/logo/logo@2x.png 2x" 
-                                     media="(max-width:767px)">     
-                    
-                        <img class="logo" src="./images/logo/logo.png" alt="Logo of our brand - IceCream">
-                </picture>
-            
+        <a href="index.html" class="logo__link link">
+            <picture>
+                <source srcset="./images/logo/logo.webp 1x, 
+                                ./images/logo/logo@2x.webp 2x"
+                                 media="(min-width:1200px)" 
+                                 type="image/webp">                
+                    <source srcset="./images/logo/logo.png 1x, 
+                                    ./images/logo/logo@2x.png 2x" 
+                                media="(min-width:1200px)">
+                                           
+                <source srcset="./images/logo/logo.webp 1x, 
+                                ./images/logo/logo@2x.webp 2x"
+                                  media="(min-width:768px)" 
+                                  type="image/webp">
+                    <source srcset="./images/logo/logo.png 1x, 
+                                    ./images/logo/logo@2x.png 2x" 
+                                media="(min-width:768px)">
+
+                <source srcset="./images/logo/logo.webp 1x, 
+                                ./images/logo/logo@2x.webp 2x"
+                                 media="(max-width:767px)" 
+                                 type="image/webp">
+                    <source srcset="./images/logo/logo.png 1x, 
+                                    ./images/logo/logo@2x.png 2x" 
+                                 media="(max-width:767px)">     
+                
+                    <img class="logo-ice" src="./images/logo/logo.png" alt="Logo of our brand - IceCream">
+            </picture>
         </a>
+            <nav class="navigation">
 
+            
+                <ul class="site-nav list">
+                    <li class="site-nav__item"><a class="site-nav__link link--current link" href="#">Home</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link  link" href="#">About us</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link  link" href="#">How it’s made?</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link  link" href="#">Our products</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link  link" href="#">Contact</a></li>
+                </ul>
+            
+            </nav>
+
+        <button type="button" class="burger__btn" data-menu-button>
+            <svg class="burger__btn icon_btn" >
+                <use href="./images/icon/sprite.svg#brg-menu"></use>
+            </svg>
+        </button>
 
         <button class="btn__order-tabl" type="button">
             <span class="btn__title-tabl">Buy now</span>
             <svg class="btn__order-icon-tabl">
-                <use href="./images/about/about-sprite.svg#icon-Vector-1"></use>
+                <use href="./images/icon/sprite.svg#icon-Vector-1"></use>
             </svg>
         </button>
 
-        <button type="button" class="burger__btn" data-menu-button>
-            <svg class="burger__btn icon_btn" >
-                <use href="./images/sprite-head.svg#brg-menu"></use>
-            </svg>
-        </button>
 
         <!--Mobile menu-->
 <div class="mobile__menu" data-menu>
     <button class="mobile__close__btn" type="button" data-menu-close>
         <svg class="menu__close__btn__icon" width="14px" height="14px">
-            <use href="./images/sprite-head.svg#icon-close_brg"></use>
+            <use href="./images/icon/sprite.svg#icon-close_brg"></use>
         </svg>
     </button>
 
     <button class="btn__order" type="button">
         <span class="btn__title">Buy now</span>
         <svg class="btn__order-icon">
-            <use href="./images/about/about-sprite.svg#icon-Vector-1"></use>
+            <use href="./images/icon/sprite.svg#icon-Vector-1"></use>
         </svg>
     </button>
 
