--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -40,6 +40,10 @@ html {
     list-style-type: none; 
   }
 
+  .link {
+    text-decoration: none;
+  }
+
   .global {
     background-color: #E5E5E5;
     // background-color: var(--primary-bg-color);
