--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -10,3 +10,10 @@
         margin: 0 auto;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    .container {
+        padding: 0 115px;
+        margin: 0 auto;
+    }
+}
