--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,5 +1,61 @@
 .hero .container  {
-    width: 100vw;
-    height: 502px;
-    background-color: #b8ffb8;
+    padding-right: 0;
+    padding-left: 20px;
+    padding-top: 83px;
+        min-width: 320px;
+        height: 502px;
+        background-color: #FFB8CA;
+    
+    }
+
+    .hero__content {
+
+    }
+.hero__titel {
+    margin-top: 110px;
+    margin-bottom: 19px;
 }
+
+    .hero__titel--white {
+        font-family: 'Titan One';
+        font-weight: 400;
+        font-size: 26px;
+        line-height: 30px;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+        
+        color: #FFFFFF
+    }
+
+    .hero__titel--acent {
+        font-family: 'Titan One';
+        
+        font-weight: 400;
+        font-size: 48px;
+        line-height: 96.5%;
+        /* or 46px */
+        
+        text-transform: uppercase;
+        
+        color: #D41443;
+    }
+
+@media screen and (min-width: 768px) {
+    .hero .container  {
+        padding-right: 34px;
+        padding-left: 34;
+        padding-top: 83px;
+            min-width: 768px;
+            height: 399px;
+    }
+} 
+@media screen and (min-width: 1200px) {
+    .hero .container  {
+        padding-right: 34px;
+        padding-left: 34;
+        padding-top: 83px;
+            min-width: 768px;
+            height: 665px;
+    }
+}
+     
