--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -1,7 +1,8 @@
 // Mobile Menu
 .mobile__menu {
     position: fixed;
-    width: 100vw;
+    width: 100%;
+    // width: 100vw;
     height: 100vh;
 
     padding-top: 60px;
@@ -94,9 +95,9 @@
     margin-bottom: 64px;
 }
 
-.mobile__menu__item {
-    text-decoration: none;
-}
+// .mobile__menu__item {
+//     text-decoration: none;
+// }
 
 //Mobile BTN
 .btn__order {
