--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,11 @@
 <header class="hero">
     <div class="container">
+<div class="hero__content">
+    <h1 class="hero__titel">
+        <span class="hero__titel--white">ice cream <br>
+            made with</span><br><span class="hero__titel--acent">passion</span>
+    </h1>
+</div>
+
     </div>
 </header>
