--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -25,8 +25,8 @@ img {
   list-style: none;
 }
 
-/* Contanier 320 */
-.container {
+/* Contanier 320  добавил _cont*/
+.container_cont {
   width: 280px;
   padding-left: 20px;
   padding-right: 20px;
