исправлена кнопка buy now

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,7 +35,13 @@
         </button>
         </div>
         <div class="buy-btn-block">
-            <button class="header-btn" type="button" data-modal-open>Buy now ></button>
+            <button class="header-btn" type="button" data-modal-open>
+                Buy now
+            <svg>
+                <use href="./images/icons/symbol-defs.svg#icon-left-arrow-svg-2"></use>
+            </svg>
+            </button>
+
         </div>
         </div>
         
