--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -42,5 +42,11 @@
   &:hover,
   &:focus {
     background-color: $btn-hover-color;
+    cursor: pointer;
+  }
+   & svg {
+    width: 7px;
+    height: 11px;
+    margin-left: 13px;
   }
 }
