мобилка готова, сломала таблетку

--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -14,21 +14,30 @@
   margin-bottom: 140px;
   text-align: center;
   @media screen and(min-width:768px) {
-    padding-bottom: 150px;
+    margin-bottom: 150px;
   }
   @media screen and(min-width:1280px) {
-    padding-bottom: 259px;
+    margin-bottom: 259px;
   }
 }
 
 .products-benefit {
-  margin-bottom: 15px;
+margin-bottom: 16px;
 font-family: var(--title-font);
 font-weight: 400;
 font-size: 18px;
 line-height: 1.167;
 text-transform: uppercase;
 color: var(--label-color);
+@media screen and(min-width:768px) {
+  font-size: 26px;
+line-height: 1.154;
+}
+@media screen and(min-width:1280px) {
+  font-size: 30px;
+  line-height: 1.133;
+}
+
 }
 
 .products-title {
@@ -40,20 +49,50 @@ color: var(--label-color);
   text-transform: uppercase;
 
   color: var(--main-dark-color);
+  @media screen and(min-width:768px) {
+    font-size: 48px;
+    line-height: 1.146;
+  }
+  @media screen and(min-width:1280px) {
+    font-size: 58px;
+    line-height: 1.138;
+  }
+}
+
+
+.products-list {
+  @media screen and(min-width:768px) {
+    display: flex;
+    margin: -10px;
+  }
+  @media screen and(min-width:1280px) {
+    display: flex;
+    margin: -12px;
+  }
 }
 
 .products-item {
-  
-  width: 280px;
+    width: 280px;
   padding-top: 160px;
   padding-bottom: 40px;
   border-radius: 24px;
   text-align: center;
-  // outline: solid 1px red;
-
+@media screen and(max-width:767px) {
   &:not(:last-child){
     margin-bottom: 120px;
   }
+  }
+
+@media screen and(min-width:768px) {
+    margin: 10px;
+    padding-top: 152px;
+  }
+  @media screen and(min-width:1280px) {
+    margin:12px;
+    padding-top: 162px;
+    padding-bottom: 50px;
+  }
+
 }
 
 .ice-cream {
@@ -65,9 +104,17 @@ color: var(--label-color);
 
 .ice-coffee {
   background-color: var( --bg-ice-coffee-cafe);
+  &::before {
+  content: '';
+  background-image: url(../images/product/mobile-ice-coffee.png);
+}
 }
 .milkshakes {
   background-color: var( --bg-milkshakes-foodtruck);
+  &::before {
+  content: '';
+  background-image: url(../images/product/mobile-milkshakes.png);
+}
 }
 .products-img {
   position: relative;
@@ -94,14 +141,6 @@ color: var(--label-color);
 }
 
 
-.ice-coffee::before {
-  content: '';
-  background-image: url(../images/product/mobile-ice-coffee.png);
-}
-.milkshakes::before {
-  content: '';
-  background-image: url(../images/product/mobile-milkshakes.png);
-}
 
 .products-svg-ice-cream {
   position: relative;
