--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -5,8 +5,19 @@
 // }
 
 .advantages {
-  padding-top: 39px;
-  padding-bottom: 97px;
+  padding-top: 20px;
+  padding-bottom: 48px;
+  background-color: var(--second-bgc);
+
+  @media (min-width: $tablet) {
+    padding-top: 33px;
+    padding-bottom: 71px;
+  }
+
+  @media (min-width: $desktop) {
+    padding-top: 20px;
+    padding-bottom: 70px;
+  }
 }
 
 .advantages__item {
